# belief_revise

./: .gitignore  CMakeLists.txt  High_level_documentation.tex  README.md
minisat_all/: Makefile  main.c  obdd.c  solver.c
src/: belief.cpp  belief.h  file.cpp  file.h  interactive.cpp  interactive.h  main.cpp  utils.cpp  utils.h
test_data/: 1.txt  2.txt  3.txt  4.txt  5.txt
